confluent/config/producer-app-data.yaml
##  Create kafka instance with type Statefulset to run command "kafka-producer-perf-test"
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elastic
  namespace: confluent
spec:
  serviceName: elastic
  podManagementPolicy: Parallel
  replicas: 1
  selector:
    matchLabels:
      app: elastic
  template:
    metadata:
      labels:
        app: elastic
    spec:
      containers:
      - name: elastic
        image: confluentinc/cp-kafka:latest
        command:
        - /bin/sh
        - -c
        - |
          kafka-producer-perf-test \
            --topic ${HOSTNAME}  \
            --record-size 64 \
            --throughput 1 \
            --producer.config /mnt/kafka.properties \
            --num-records 230400
        volumeMounts:
        - name: kafka-properties
          mountPath: /mnt
          readOnly: true
        resources:
          requests:
            memory: 512Mi # 768Mi
            cpu: 500m # 1000m
      volumes:
        - name: kafka-properties # Create secret with name `kafka-client-config` with client configurations
          secret:
            secretName: kafka-client-config           
---
## headless-service for kafka-instance
apiVersion: v1
kind: Service
metadata:
  name: elastic
  namespace: confluent
spec:
  clusterIP: None
