confluent/config/confluent-virtualservice-azure.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: confluent-vs
  namespace: confluent ## The Virtualservice should be created in confluent namespace
spec:
  hosts:
  - confluent.infologistix-cnc.ddnss.org ## define domain name of confluent here
  gateways:
  - istio-ingress-gateway.istio-system.svc.cluster.local ## name of istio-gateway
  http:
  - match:
    - uri:
        prefix: / 
    route:
    - destination:
        host: controlcenter.confluent.svc.cluster.local ## name of service of controlcenter
        port:
          number: 9021 ## port of service of controlcenter
